Set signs properly for buy/sell transactions in QIF importer

Send to statement reader negative buy transactions and positive or negative sell transactions, which is dependend on fees and proceeds relationship.

BUG: 351874
REVIEW: 124957

Signed-off-by: Łukasz Wojniłowicz <lukasz.wojnilowicz@gmail.com>